--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,17 @@
 @import "./font-awesome";
 @import "./side_bar";
 @import "./main_chat";
+
+@import "font-awesome";
+@import "config/size";
+@import "config/reset";
+@import "config/colors";
+@import "mixins/mixin";
+@import "mixins/vendor_prefix";
+@import "modules/side_bar";
+@import "modules/chat";
+@import "modules/user";
+@import "modules/flash";
+@import "messages/messages.scss";
+
+@import "group";
