--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .side_bar__user_name
     .top_items
       %p.top_items__name
-        masa
+        = current_user.name
       %p.top_items__icon
-        = link_to "#", class: "edit-icon" do
+        = link_to new_group_path, class: "edit-icon" do
           = icon('fas','edit')
-        = link_to "#", class: "cog-icon" do
+        = link_to edit_user_path(current_user), class: "cog-icon" do
           = icon('fas', 'cog')
   .side_bar__group
     .side_bar__group__list
