--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,37 +2,24 @@
   .main_chat__group_info
     .main_chat__group_info__left_box
       %p.main_chat__group_info__left_box__group_name
-        TEST
+        = @group.name
       %p.main_chat__group_info__left_box__member
-        MEMBER : masa
+        MEMBER
+        - @group.group_users.each do|group_user|
+          = group_user.user.name
+
     .main_chat__group_info__right_box
       .main_chat__group_info__right_box__edit_btn
-        =link_to "Edit"
+        =link_to "Edit",edit_group_path(@group)
 
   .main_chat__message_list
-    .main_chat__message_list__users1
-      .main_chat__message_list__users1__info
-        %p.main_chat__message_list__users1__info__name
-          masa
-        %p.main_chat__message_list__users1__info__daytime
-          2019/11/20(Wed) 17:31:04
-      %p.mail_chat__message_list__comment1
-        こんにちは！
-    .main_chat__message_list__users2
-      .main_chat__message_list__users2__info
-        %p.main_chat__message_list__users2__info__name
-          masa
-        %p.main_chat__message_list__users2__info__daytime
-          2019/11/20(Wed) 17:31:04
-      %p.mail_chat__message_list__comment2
-        こんにちは！
-
+    = render @messages
 
   .main_chat__message_form
-    %form.new_message
+    = form_for [@group, @message] do |f|
       .input_box
-        %input{type: "text", class: "input_box__text", placeholder: "type a message"}
-        %label{class: "input_box__image"}
-          =icon('fas', 'image')
-          %input{type: "file", class: "input_box__image__file"}
-      %input{type: "submit", class: "submit-btn", value: "Send"}
+        = f.text_field :content, class: 'input_box__text', placeholder: 'type a message'
+        = f.label :image, class: 'input_box__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'input_box__image__file'
+      = f.submit 'Send', class: 'submit-btn', value: "Send"
